maud/tests/warnings/non-string-literal.stderr
error: literal must be double-quoted: `"42"`
 --> $DIR/non-string-literal.rs:5:9
  |
5 |         42
  |         ^^

error: literal must be double-quoted: `"42usize"`
 --> $DIR/non-string-literal.rs:6:9
  |
6 |         42usize
  |         ^^^^^^^

error: literal must be double-quoted: `"42.0"`
 --> $DIR/non-string-literal.rs:7:9
  |
7 |         42.0
  |         ^^^^

error: literal must be double-quoted: `"a"`
 --> $DIR/non-string-literal.rs:8:9
  |
8 |         'a'
  |         ^^^

error: expected string
 --> $DIR/non-string-literal.rs:9:9
  |
9 |         b"a"
  |         ^^^^

error: expected string
  --> $DIR/non-string-literal.rs:10:9
   |
10 |         b'a'
   |         ^^^^

error: attribute value must be a string
  --> $DIR/non-string-literal.rs:13:24
   |
13 |         input disabled=true;
   |                        ^^^^
   |
   = help: to declare an empty attribute, omit the equals sign: `disabled`
   = help: to toggle the attribute, use square brackets: `disabled[some_boolean_flag]`

error: attribute value must be a string
  --> $DIR/non-string-literal.rs:14:24
   |
14 |         input disabled=false;
   |                        ^^^^^
   |
   = help: to declare an empty attribute, omit the equals sign: `disabled`
   = help: to toggle the attribute, use square brackets: `disabled[some_boolean_flag]`
